--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@paypal/react-paypal-js": "^8.8.3",
     "@prisma/client": "^6.4.1",
     "bcryptjs": "^3.0.2",
+    "cloudinary": "^2.6.1",
     "clsx": "^2.1.1",
     "next": "15.2.0",
     "next-auth": "^5.0.0-beta.27",
